2003-08-20  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS.

2003-08-14 Christian Schaller <Uraeus@gnome.org>

	* Misc bug fixes
	* Most important being fixin of many of the emblem names
	  to make them more consistant with the base theme
	* tag for 0.3 release

2003-08-13 Christian Schaller <Uraeus@gnome.org>
	
	* Added Industrial theme engine since Gorilla needs it
	* This makes g-t-e conflict with ximian artwork, hopefully
	  Ximian will start to ship Industrial as a standalone package so
	  I can obsolete that

2003-08-12 Christian Schaller <Uraeus@gnome.org>

	* Adding preview of final Amaranth Metacity theme, looks pretty ok
	  but fails to use GTK+ colours and has pixmap instead of SVG buttons

2003-08-04 Christian Schaller <Uraeus@gnome.org>

	* Moved Smooth into separate subdir
	* Patch Smooth to latest version
	* Added new Amaranth theme from ajgenius
	* Fixed old commented out Gorilla app symlink
	* Add new stock icons to Lush
	* Add new stock icons to Nuvola
	* Added a few app icons for Amaranth
	* Added fake Nuvola gtk-1 from James Ogley

2003-07-31 Christian Schaller <Uraeus@gnome.org>

	* Added lots of new Amaranth icons from Michael Doches
	* Added Gorilla inheritance fix from James Ogley
	* Added .mo files to SPEC file fix from Håvard Wigtil

2003-07-28  Jakub Steiner <jimmac@ximian.com>

	* Gorilla/metacity-1/metacity-theme-1.xml: temporarily revert
	  Uraeus' maximized state, since it draws a nasty light border.
	  I'll see about a proper maximized state in future.

2003-07-27 Christian Schaller <uraeus@gnome.org>
	
	* Update Smooth engine to use latest from smooth CVS
	* Fix a couple of Nuvola icons
	* Update Nuvola license to LGPL (thanks David!)
	* Remove Galaxy and BlueSphere from package

2003-07-23 Christian Schaller <Uraeus@gnome.org>

	* Switch mazimize and restore icons in Wasp, they where wrong now

2003-07-18  Christophe Merlet  <redfox@redfoxcenter.org>

	* */*/*/*/Makefile.am: Add DESTDIR variable.
