@@ -1,0 +1,7 @@
+icondir = $(datadir)/icons/Gorilla/24x24/apps
+NULL = 
+icon_DATA = \
+        gnome-spinner.png \
+        gnome-spinner-rest.png \
+        $(NULL)
+EXTRA_DIST = $(icon_DATA)
