@@ -1,3 +1,14 @@
+2003-08-22  Jakub Steiner <jimmac@ximian.com>
+
+	* configure.in
+	* Gorilla/icons/Makefile.am
+	* Gorilla/icons/index.theme.in
+	* Gorilla/icons/24x24/Makefile.am
+	* Gorilla/icons/24x24/apps/Makefile.am
+	* Gorilla/icons/24x24/apps/gnome-spinner-rest.png
+	* Gorilla/icons/24x24/apps/gnome-spinner.png: spinner for Gorilla
+	  (I'll investigate the possibility to make it ssvg as well)
+
 2003-08-20  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Added "no" to ALL_LINGUAS.
